Laying the foundation
- Added basic DB models (CustomUser, Email, Attachment)
- Configured settings for custom user model and added
  support for user uploaded files (attachments)
- Added base.html starter page

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
+# ignore system files
 .DS_Store
 __pycache__/
+
+# ignore IDE settings
 .vscode/
 *.code-workspace
 .idea/
+
+# ignore DB
 *.sqlite3
+
+# ignore user uploaded files
+code/app/media/*
