--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ services:
   - docker
 
 script:
-  - docker-compose up -d test-docker-compose.yml
+  - docker-compose up -d -f test-docker-compose.yml
