--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ services:
   - docker
 
 script:
-  - docker-compose -f test-docker-compose.yml up -d
+  - docker-compose -f test-docker-compose.yml up
