more travs stuff

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ services:
   - docker
 
 script:
-  - docker-compose -f test-docker-compose.yml up
+  - docker-compose -f test-docker-compose.yml up --exit-code-from django-test
